--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ flutter:
     - assets/images/background_login.jpeg
     - assets/images/foco-da-camera.png
     - assets/images/Logo_SimplesBranca.png
+    - assets/images/menu.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
